# roomege

./: .gitignore  hello.py  pyproject.toml
conf/: settings.py  urls.py
roomege/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
roomege/migrations/: 0001_initial.py  0002_alter_customuser_age_alter_customuser_room_state.py  0003_alter_customuser_bedtime_alter_customuser_waketime.py  0004_alter_customuser_church_and_more.py  0005_customuser_image.py  0006_alter_customuser_city_and_more.py  0006_alter_customuser_options_customuser_gender_and_more.py  0007_merge_20250920_1844.py  0008_customuser_matches.py  0009_alter_customuser_dishes_scenario_and_more.py  0010_alter_customuser_image.py
roomege/static/public/css/: base.css
roomege/templates/: base.html  header.html
roomege/templates/roomege/: create_profile.html  matches.html  profile.html
