[project]
name = "hackathon-2025-09-19"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-allauth>=65.11.2",
    "django-widget-tweaks>=1.5.0",
    "faker>=37.8.0",
    "pillow>=11.3.0",
    "requests>=2.32.5",
]
